--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -12,6 +12,83 @@
   <link rel="icon" type="image/png" href="favicon.png"/>
   <title>AHF - Tools</title>
   <link rel="manifest" href="manifest.json">
+  <script src="https://alcdn.msauth.net/browser/2.38.0/js/msal-browser.min.js" crossorigin="anonymous"></script>
+  <script>
+    (function() {
+      const defaultScopes = ['User.Read', 'openid', 'profile', 'email'];
+
+      window.msalHelper = {
+        client: null,
+        init: function(config) {
+          if (!window.msal || !window.msal.PublicClientApplication) {
+            return Promise.reject('MSAL browser library not loaded');
+          }
+
+          const authority = config.authority || `https://login.microsoftonline.com/${config.tenantId || 'common'}`;
+          const redirectUri = config.redirectUri || window.location.origin;
+
+          this.client = new msal.PublicClientApplication({
+            auth: {
+              clientId: config.clientId,
+              authority: authority,
+              redirectUri: redirectUri,
+            },
+            cache: {
+              cacheLocation: 'localStorage',
+              storeAuthStateInCookie: false,
+            },
+          });
+
+          return this.client.initialize().then(() => {
+            const account = this.client.getActiveAccount() || (this.client.getAllAccounts()[0] || null);
+            if (account) this.client.setActiveAccount(account);
+            return true;
+          });
+        },
+        login: function(scopes) {
+          const request = {
+            scopes: scopes && scopes.length ? scopes : defaultScopes,
+          };
+          return this.client.loginPopup(request).then((response) => {
+            if (response.account) this.client.setActiveAccount(response.account);
+            return {
+              accessToken: response.accessToken,
+              idToken: response.idToken,
+              account: response.account,
+            };
+          });
+        },
+        acquireToken: function(scopes) {
+          const request = {
+            scopes: scopes && scopes.length ? scopes : defaultScopes,
+          };
+          const account = this.client.getActiveAccount() || (this.client.getAllAccounts()[0] || null);
+          if (account) {
+            request.account = account;
+          }
+          return this.client.acquireTokenSilent(request)
+            .catch(() => this.client.acquireTokenPopup(request))
+            .then((response) => {
+              if (response.account) this.client.setActiveAccount(response.account);
+              return {
+                accessToken: response.accessToken,
+                idToken: response.idToken,
+                account: response.account,
+              };
+            });
+        },
+        getAccount: function() {
+          if (!this.client) return null;
+          return this.client.getActiveAccount() || (this.client.getAllAccounts()[0] || null);
+        },
+        logout: function() {
+          if (!this.client) return Promise.resolve();
+          const account = this.client.getActiveAccount();
+          return this.client.logoutPopup({ account: account });
+        },
+      };
+    })();
+  </script>
   <script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
